# vibe-checker

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
demo/: api.py  auth.py  config.py  demo.tape  models.py  utils.py
docs/: git-hook.md  rules.md  usage.md  vscode.md
reports/: report.md  vibe_report.sh
src/flake8_vibes/: cli.py  git.py  plugin.py  scorer.py
src/flake8_vibes/rules/: __init__.py  async_crimes.py  base.py  boolean_chaos.py  calendar_crimes.py  class_crimes.py  comment_sins.py  debug_artifacts.py  docstring_vibes.py  exception_crimes.py  hardcoding.py  import_drama.py  misc_chaos.py  naming_crimes.py  return_crimes.py  string_crimes.py  structure_complexity.py  test_vibes.py  thursday_energy.py  todo_shame.py
tests/: conftest.py  test_cli.py  test_git.py  test_plugin.py  test_scorer.py
tests/rules/: test_async_crimes.py  test_boolean_chaos.py  test_calendar_crimes.py  test_class_crimes.py  test_comment_sins.py  test_debug_artifacts.py  test_docstring_vibes.py  test_exception_crimes.py  test_hardcoding.py  test_import_drama.py  test_misc_chaos.py  test_naming_crimes.py  test_return_crimes.py  test_string_crimes.py  test_structure_complexity.py  test_test_vibes.py  test_thursday_energy.py  test_todo_shame.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
