[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flake8-vibes"
version = "0.1.1"
requires-python = ">=3.9"
dependencies = ["flake8>=6.0.0"]

[project.optional-dependencies]
dev = ["black", "isort", "mypy", "ruff", "pytest", "pytest-cov"]

[project.entry-points."flake8.extension"]
VIB = "flake8_vibes.plugin:VibesPlugin"

[project.scripts]
vibe-check = "flake8_vibes.cli:main"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
known_first_party = ["flake8_vibes"]

[tool.mypy]
strict = true
python_version = "3.9"
mypy_path = "src"
explicit_package_bases = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PT"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=flake8_vibes --cov-report=term-missing --cov-fail-under=90"

[tool.hatch.build.targets.wheel]
packages = ["src/flake8_vibes"]
